# comment-analysis

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  yahoo_comment_analysis_codex_spec.md
data/: sample_article.json
src/: __init__.py
src/analysis/: __init__.py  derived.py  emotion_seismograph.py  galaxy.py  pipeline.py  vector.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  models.py
src/embeddings/: __init__.py  client.py
src/ingestion/: __init__.py  normalized_loader.py  web_loader.py  yahoo_selenium.py
src/llm/: __init__.py  client.py  schemas.py
src/preprocessing/: __init__.py  text.py
src/storage/: __init__.py  cache.py
src/ui/: views.py
tests/: test_analysis.py  test_models_and_cache.py  test_pipeline.py  test_preprocessing.py  test_web_loader.py
