[project]
name = "yahoo-comment-analysis"
version = "0.1.0"
description = "ニュース本文と正規化済みコメントの多面的分析アプリ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "numpy>=1.26,<2",
  "openai>=1.40,<2",
  "pandas>=2.1,<3",
  "plotly>=5.20,<7",
  "pydantic>=2.7,<3",
  "requests>=2.31,<3",
  "scikit-learn>=1.4,<1.7",
  "selenium>=4.20,<5",
  "scipy>=1.11,<1.15",
  "streamlit>=1.35,<2",
  "tenacity>=8.2,<10",
  "threadpoolctl>=3.2,<4",
]

[project.optional-dependencies]
analysis = [
  "hdbscan>=0.8.36,<1",
  "ruptures>=1.1.9,<2",
  "umap-learn>=0.5.6,<1",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
